# xxx

./: .gitignore  readme.txt
xxx/: xxx.VC.db  xxx.sln
xxx/Debug/: DefaultTest.dll.metagen  recv.7z  send.7z  send.txt  test.exp  test.ilk  test.lib  xxx.ilk
xxx/TestResults/6fc83b64-b648-40df-96aa-91c85caba641/: root_DESKTOP-F779GMT 2018-03-15 23_09_43.coverage
xxx/TestResults/c16eeecd-c9a0-4284-86cd-914fcbc867c5/: root_DESKTOP-F779GMT 2018-03-20 23_45_50.coverage
xxx/TestResults/f65cfa01-4f0e-475c-88c7-a74bbe131c3f/: root_DESKTOP-F779GMT 2018-03-20 23_46_13.coverage
xxx/linux/: CMakeLists.txt  Makefile  cmake_install.cmake  linxxx
xxx/src/: assembler.cpp  assembler.h  disassembler.cpp  formater.cpp  formater.h  receiver.cpp  receiver.h  recv_transport.cpp  recv_transport.h  send_transport.cpp  send_transport.h  sender.cpp  socketest.cpp  xxx.cpp
xxx/test/: AssemblyInfo.cpp  UnitTest.cpp  stdafx.h  test.cpp  test.vcxproj  test.vcxproj.filters  transport.cpp  unittest1.cpp
xxx/test/Debug/: .NETFramework,Version=v4.0.AssemblyAttributes.asm  test.vcxprojResolveAssemblyReference.cache  vc140.idb
xxx/windows/wintest/: ReadMe.txt  wintest.vcxproj  wintest.vcxproj.filters
xxx/windows/winxxx/: ReadMe.txt  winxxx.sln  winxxx.vcxproj  winxxx.vcxproj.filters
xxx/xxx/: ReadMe.txt  assembler.cpp  assembler.h  disassembler.cpp  disassembler.h  formater.cpp  formater.h  receiver.cpp  receiver.h  recv_transport.cpp  recv_transport.h  send_transport.cpp  send_transport.h  sender.cpp  sender.h  stdafx.cpp  stdafx.h  xxx.cpp  xxx.vcxproj  xxx.vcxproj.filters
(+36 files in other folders)
